@@ -97,9 +97,9 @@ been factored out of Rcpp into the package RcppClassic, and it is still
 available for code relying on the older interface. New development should
 always use this Rcpp package instead.
 
-Other usage examples are provided by packages using Rcpp. As of June 2020,
-there are 1990 [CRAN](https://cran.r-project.org) packages using Rcpp, a further
-203 [BioConductor](https://www.bioconductor.org) packages in its current release
+Other usage examples are provided by packages using Rcpp. As of January 2021,
+there are 2169 [CRAN](https://cran.r-project.org) packages using Rcpp, a further
+207 [BioConductor](https://www.bioconductor.org) packages in its current release
 as well as an unknown number of GitHub, Bitbucket, R-Forge, ... repositories
 using Rcpp.  All these packages provide usage examples for Rcpp.
 
