@@ -1,7 +1,7 @@
 
 // config.h: Rcpp R/C++ interface class library -- Rcpp configuration
 //
-// Copyright (C) 2010 - 2020  Dirk Eddelbuettel and Romain Francois
+// Copyright (C) 2010 - 2021  Dirk Eddelbuettel and Romain Francois
 //
 // This file is part of Rcpp.
 //
@@ -26,11 +26,11 @@
 #define RcppDevVersion(maj, min, rev, dev)  (((maj)*1000000) + ((min)*10000) + ((rev)*100) + (dev))
 
 // the currently released version
-#define RCPP_VERSION            Rcpp_Version(1,0,5)
-#define RCPP_VERSION_STRING     "1.0.5"
+#define RCPP_VERSION            Rcpp_Version(1,0,6)
+#define RCPP_VERSION_STRING     "1.0.6"
 
 // the current source snapshot
-#define RCPP_DEV_VERSION        RcppDevVersion(1,0,5,4)
-#define RCPP_DEV_VERSION_STRING "1.0.5.4"
+#define RCPP_DEV_VERSION        RcppDevVersion(1,0,6,0)
+#define RCPP_DEV_VERSION_STRING "1.0.6.0"
 
 #endif
